# LQR_linux

./: README.md
LQR_PID_Controller/: CMakeLists.txt  KinematicModel.cpp  KinematicModel.h  LQR.cpp  LQR.h  Reference_path.cpp  Reference_path.h  build.sh  main.cpp  main_pid.cpp  pid_control.cpp  pid_control.h
